Updated Day7 sections

--- a/Day 7/CW/index.html
+++ b/Day 7/CW/index.html
@@ -120,10 +120,10 @@
 
     <section class="pricing_plans">
         <h3>Pricing Plans</h3><br>
-        <p>Basic - $10/month
+        <pre>Basic - $10/month
 Pro - $20/month
 Enterprise - $30/month
-        </p>
+        </pre>
     </section>
 
     <section class="about">
@@ -143,9 +143,9 @@ Enterprise - $30/month
     </section>
     <section class="showcase">
         <h3>Product Showcase</h3><br>
-        <li>Product A</li>
-        <li>Product B</li>
-        <li>Product C</li>
+        <li style="border: none; margin: 0; padding:7px;">Product A</li>
+        <li style="border: none; margin: 0; padding: 7px;">Product B</li>
+        <li style="border: none; margin: 0; padding: 7px;">Product C</li>
     </section>
 </body>
 </html>
